Fixing mario running and jumping images

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
-    user-select: none;
+    user-select: none;  
 }
 
 body {
@@ -16,6 +16,16 @@ body {
     position: relative;
     background: linear-gradient(#87CEEB, #E0F6FF);   
 }
+
+/*footer {
+  
+  text-align: center;
+  position:absolute;
+  width: 100%;
+  --bottom: 0;
+  bottom: calc(var(--bottom) * 1%); 
+} */
+
 
 .score{
     position:absolute;
@@ -53,13 +63,15 @@ body {
 }
 
 .clouds {
-    margin-top: 70px;
-    width: 200px;
+    margin-top: 90px;
+    height: 30%;
     position: absolute;
     left: calc(var(--left) * 1%);
     height: 20%;
     animation: clouds-animation 20s infinite linear;
 }
+
+
 
 @keyframes clouds-animation {
 
@@ -82,81 +94,77 @@ body {
 
 /* How to playe button and modal for instructions */
 .info-button {
-    background-color: #2550d2;
-    color: white;
-    margin-top: 30px;
-    margin-left: 30px;
-    border-radius: 10%;
-    position:absolute;
-    font-size: 2vmin;
-    left: 1vmin;
-    top:1vmin;
-  }
+  background-color: #2550d2;
+  color: white;
+  margin-top: 30px;
+  margin-left: 30px;
+}
 
-  .info-button:hover{
-    background-color: #c89858;
-  }
+.info-button:hover{
+  background-color: #c89858;
+}
 
-  .modal {
-    position:fixed;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    background-color: #111111bd ;
-    display: flex;
-    opacity:0;
-    pointer-events: none;
-  }
+.modal {
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  background-color: #111111bd ;
+  display: flex;
+  opacity:0;
+  pointer-events: none;
+}
 
-  .modal.show  {
-    opacity: 1;
-    pointer-events: auto;
-  }
+.modal.show  {
+  opacity: 1;
+  pointer-events: auto;
+}
 
-  .modal_container{
-    margin: auto;
-    width: 90%;
-    max-width: 600px;
-    max-height: 90%;
-    background-color: #fff;
-    border-radius: 6px;
-    padding: 3em 2.5em;
-    display:grid;
-    gap: 1em;
-    place-items: center;
-    grid-auto-columns: 100%;
-  }
+.modal_container{
+  margin: auto;
+  width: 90%;
+  max-width: 600px;
+  max-height: 90%;
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 3em 2.5em;
+  display:grid;
+  gap: 1em;
+  place-items: center;
+  grid-auto-columns: 100%;
+}
 
-  .modal_title{
-    font-size: 2.5rem;
-  }
+.modal_title{
+  font-size: 2.5rem;
+}
 
-  .modal_paragraph{
-    margin-bottom: 10px;
-  }
+.modal_paragraph{
+  margin-bottom: 10px;
+}
 
-  .modal_img{
-    width: 90%;
-    max-width: 200px;
-  }
+.modal_img{
+  width: 90%;
+  max-width: 200px;
+}
 
-  .modal_close{
-    text-decoration: none;
-    color: #fff;
-    background-color: #87CEEB;
-    padding: 1em 3em;
-    border: 1px solid;
-    border-radius: 6px;
-    display: inline-block;
-    font-weight: 300;
-    transition: background-color 1s;
-  }
+.modal_close{
+  text-decoration: none;
+  color: #fff;
+  background-color: #87CEEB;
+  padding: 1em 3em;
+  border: 1px solid;
+  border-radius: 6px;
+  display: inline-block;
+  font-weight: 300;
+  transition: background-color 1s;
+}
 
-  .modal_close:hover{
-    color: #87CEEB;
-    background-color: #fff;
-  }
+.modal_close:hover{
+  color: #87CEEB;
+  background-color: #fff;
+}
+
 
   /* Footer */
 
